# Zenith

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  actorTest.zn  count_non_comment_lines.ps1  getAst.ps1  grammar.ebnf  linetest.zn  main.cpp  templateTest.zn  test.cpp  test.zn  testBs.zn  testCases.zn  todo
dg/: Doxyfile
dg/html/: _a_s_t_node_8hpp.html  _a_s_t_node_8hpp.js  _a_s_t_node_8hpp__dep__incl.dot  _a_s_t_node_8hpp__incl.dot  _a_s_t_node_8hpp_source.html  _declarations_8hpp.html  _declarations_8hpp.js  _declarations_8hpp__dep__incl.dot  _declarations_8hpp__incl.dot  _declarations_8hpp_source.html  _error_reporter_8cpp.html  _error_reporter_8cpp__incl.dot  _error_reporter_8hpp.html  _error_reporter_8hpp.js  _error_reporter_8hpp__dep__incl.dot  _error_reporter_8hpp__incl.dot  _error_reporter_8hpp_source.html  _expressions_8hpp.html  _expressions_8hpp.js  _expressions_8hpp__dep__incl.dot  _expressions_8hpp__incl.dot  _expressions_8hpp_source.html  _i_annotatable_8hpp.html  _i_annotatable_8hpp.js  _i_annotatable_8hpp__dep__incl.dot  _i_annotatable_8hpp__incl.dot  _i_annotatable_8hpp_source.html  _lex_error_8cpp.html  _lex_error_8cpp__incl.dot  _lex_error_8hpp.html  _lex_error_8hpp.js  _lex_error_8hpp__dep__incl.dot  _lex_error_8hpp__incl.dot  _lex_error_8hpp_source.html  _main_nodes_8cpp.html  _main_nodes_8cpp__incl.dot  _main_nodes_8hpp.html  _main_nodes_8hpp.js  _main_nodes_8hpp__dep__incl.dot  _main_nodes_8hpp__incl.dot  (+676 more)
dg/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+90 more)
dg/latex/: _a_s_t_node_8hpp_source.tex  _declarations_8hpp_source.tex  _error_reporter_8hpp_source.tex  _expressions_8hpp_source.tex  _i_annotatable_8hpp_source.tex  _lex_error_8hpp_source.tex  _main_nodes_8hpp_source.tex  _other_8hpp_source.tex  _parse_error_8hpp_source.tex  _read_file_8hpp_source.tex  _remove_padding_8hpp_source.tex  _statements_8hpp_source.tex  _type_nodes_8hpp_source.tex  annotated.tex  class_argument_parser.tex  classsmall__vector.tex  classzenith_1_1_actor_decl_node.eps  classzenith_1_1_actor_decl_node.tex  classzenith_1_1_error_reporter.tex  classzenith_1_1_lex_error.eps  classzenith_1_1_lex_error.tex  classzenith_1_1_lexer.tex  classzenith_1_1_parse_error.eps  classzenith_1_1_parse_error.tex  classzenith_1_1_parser.tex  cmake-build-debug-visual-studio_2_c_make_files_2_show_includes_2foo_8h_source.tex  cmake-build-debug_2_c_make_files_2_show_includes_2foo_8h_source.tex  files.tex  hierarchy.tex  lexer_8hpp_source.tex  mainargs_8hpp_source.tex  parser_8hpp_source.tex  refman.tex  small__vector_8hpp_source.tex  struct_flags.tex  structzenith_1_1_a_s_t_node.eps  structzenith_1_1_a_s_t_node.tex  structzenith_1_1_annotation_node.eps  structzenith_1_1_annotation_node.tex  structzenith_1_1_array_access_node.eps  (+86 more)
docs/: LANGUAGE_SPEC.md
printers/: polymorphic.py
spec/: book.toml
spec/src/: SUMMARY.md  input.md  intro.md  keyword.md
src/: ErrorReporter.cpp  ErrorReporter.hpp  main.cpp  module.cpp  module.hpp  test.cpp
src/SemanticAnalysis/: SemanticAnalyzer.cpp  SemanticAnalyzer.cppm  SemanticAnalyzer.hpp  SemanticAnalyzernss.cpp  SymbolTable.cpp  SymbolTable.cppm  SymbolTable.hpp
src/ast/: AST.cppm  AST.hpp  ASTNode.cppm  ASTNode.hpp  Declarations.cppm  Declarations.hpp  Expressions.cppm  Expressions.hpp  IAnnotatable.cppm  IAnnotatable.hpp  MainNodes.cppm  MainNodes.hpp  Node.hpp  Other.cppm  Other.hpp  SourceLocation.hpp  Statements.cppm  Statements.hpp  TypeNodes.cppm  TypeNodes.hpp  acceptMethods.cpp  acceptMethods.hpp
src/core/: ASTNode.cppm  ASTNode.hpp  IAnnotatable.hpp  MainNodes.cpp  indirect_polymorphic.hpp  polymorphic.cpp  polymorphic.cppm  polymorphic.hpp  polymorphic_ref.cppm  polymorphic_ref.hpp  polymorphic_variant.cppm  polymorphic_variant.hpp
src/exceptions/: ErrorReporter.cpp  ErrorReporter.hpp  LexError.cpp  LexError.hpp  ParseError.cpp  ParseError.hpp  SemanticAnalysisError.cpp  SemanticAnalysisError.hpp
src/lexer/: LexError.cpp  LexError.hpp  error.cpp  error.hpp  lexer.cpp  lexer.hpp
src/parser/: ParseError.cpp  ParseError.hpp  error.cpp  error.hpp  parser.cpp  parser.hpp
src/test/: LexerTest.cpp  PolymorphicTest.cpp  test.cpp
src/utils/: Colorize.hpp  ReadFile.cpp  ReadFile.hpp  RemovePadding.cpp  RemovePadding.hpp  hash.hpp  mainargs.hpp  small_vector.cpp  small_vector.hpp
src/visitor/: Visitor.cpp  Visitor.cppm  Visitor.hpp
test/: line_count.zn  testCases.zn
